[package]
name = "rehashes"
version = "0.1.0"
edition = "2024"

[lib]
name = "rehashes"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py310"] }
sha2 = "0.11.0"
hex = "0.4"
md-5 = "0.11.0"
sha1 = "0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_cbor = "0.11.2"
