[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "rehashes"
description = """\
    Provides Python hashers (MD5, SHA-1, SHA-2, ssdeep) with serializable internal state that can be \
    persisted and recovered to continue hashing in another context.\
"""
version = "0.2.0"
requires-python = ">=3.10"
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE.txt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]

Homepage = "https://github.com/CERT-Polska/rehashes"
Repository = "https://github.com/CERT-Polska/rehashes.git"
Issues = "https://github.com/CERT-Polska/rehashes/issues"
Changelog = "https://github.com/CERT-Polska/rehashes/releases"

[tool.maturin]
module-name = "rehashes"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
